# ink

./: .gitignore  README.md  generate-commitment-proof.sh  package.json  proof.sh
circuits/: 256bit.zok  README.md  build.sh  merkle.zok  withdraw.zok
client/: 0-generateKeyPair.js  1-registerScanKey.js  2-mintToAlice.js  util.js
config/: default.json
contracts/: Cargo.toml  build-all.sh  build-test-all.sh  lib.rs  test-all.sh
contracts/anonymous/: Cargo.toml  lib.rs
contracts/erc721/: lib.rs
contracts/relayer/: Cargo.toml  constants.rs  lib.rs
contracts/verifier/: Cargo.toml  constants.rs  lib.rs
docs/: GreenLemon.key  workflow.key
http/: index.js
proofs/: proof-2.json  proof-4.json  proof-5.json
relayer/: README.md
relayer/circuits/: README.md  withdraw.zok
relayer/contracts/: Cargo.toml  build.sh  generators.rs  jubjub.rs  lib.rs
relayer/contracts/anonymous/: Cargo.toml
relayer/contracts/verifier/: Cargo.toml
relayer/tests/: index.js  mimc.js  package.json
relayer/tests/zokrates-pycryptojs/: README.md
scripts/: 1-compute-witness.js  2-generate-proof.js
tests/: 0-generateCommitment.js  1-generateCommitment.js  2-compute-witness.js  3-generate-proof.js  3-verify-proof-offchain.js  4-verify-proof-offchain.js  index.js  merkle-tree.js  mimc.js  package.json
tests/proofs/: commitment.json  proof-1.json  proof-2.json  proof-3.json  proof-4.json  proof-5.json
tests/zokrates-pycryptojs/: index.js
tests/zokrates-pycryptojs/src/: pythonShellExec.js
tests/zokrates-pycryptojs/tests/: test.js
(+6 files in other folders)
