
[package]
name = "relayer"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.3", default-features = false }
ink_metadata = { version = "3.3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3", default-features = false }
ink_storage = { version = "3.3", default-features = false }
ink_lang = { version = "3.3", default-features = false }
ink_prelude = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# zk library
zkp-u256 = { git = "https://github.com/GreenLemonProtocol/OpenZKP", branch = "master", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[lib]
name = "relayer"
path = "lib.rs"
doctest = false
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false